<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FEE8FF"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:text="@string/app_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textColor="#E2B1F3"
            android:paddingLeft="24dp"
            android:layout_marginBottom="24dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="63dp"
                android:layout_height="wrap_content"
                android:layout_gravity="fill_horizontal|center_vertical"
                android:gravity="right"
                android:text="@string/label_reader"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="fill_horizontal"
                android:layout_weight="1"
                android:hint="@string/edit_text_hint_reader"/>

            <TextView
                android:layout_width="63dp"
                android:layout_height="wrap_content"
                android:layout_gravity="fill_horizontal|center_vertical"
                android:gravity="right"
                android:text="@string/label_sex"/>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:orientation="horizontal">

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/radio_male"/>

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/radio_female" />

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="63dp"
                android:layout_height="wrap_content"
                android:layout_gravity="fill_horizontal|center_vertical"
                android:gravity="right"
                android:text="@string/label_borrow_time"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="fill_horizontal"
                android:layout_weight="1"
                android:hint="@string/edit_text_hint_please_type"/>

            <TextView
                android:layout_width="63dp"
                android:layout_height="wrap_content"
                android:layout_gravity="fill_horizontal|center_vertical"
                android:gravity="right"
                android:text="@string/label_return_time"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal"
                android:text="2020.04.30"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="63dp"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/label_hobby"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkbox_label_history"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkbox_label_xuanyi"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkbox_label_art"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="63dp"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/label_age"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_age_min"
                android:gravity="center"/>
            <SeekBar
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:min="18"
                android:max="@string/label_age_max"
                android:gravity="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_age_max"
                android:gravity="center"/>

        </LinearLayout>

<!--   老师，在此提一个问题，您可以在评语上回答吗？为什么layout_height是wrap_content，但还是剩余了那么大的空间？     -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="#ffffff"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:contentDescription="@string/desc_books"
                android:src="@mipmap/aa" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/info_book_default_value" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/info_book_type_default_value" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/info_book_age_default_value" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_query"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_next_page"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>